renamed:    Beautiful chain watch.jpeg -> Beautiful_chain_watch.jpeg 	renamed:    Oddity - DISSENT Matte Lipstick.jpeg -> Oddity_-_DISSENT_Matte_Lipstick.jpeg 	modified:   home.html 	deleted:    index.html 	renamed:    lip gloss.jpeg -> lip_gloss.jpeg 	modified:   login.html 	modified:   register.html 	deleted:    server.py 	new file:   shoes.jpeg 	new file:   shop.jpeg 	modified:   view_product.html

--- a/register.html
+++ b/register.html
@@ -18,12 +18,6 @@
 		a{
 			color: white;
 		}
-        body{
-			background-image: url("5.jfif");
-  			background-repeat:repeat;
-  			background-size:contain;
-		
-		 }
 		footer{
 			color: black;
 		}
@@ -131,7 +125,7 @@
 	<style>
 
 		body{
-			background-image:url("jackets and shoes.jpg") ;
+			background-image:url("register.jpeg") ;
 			background-repeat: repeat;
 			background-size: cover;
 		}
@@ -148,7 +142,7 @@
 		}
 
 		form {
-			background-color:white;
+			background-color:transparent;
 			padding: 20px;
 			border-radius: 10px;
 			box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
