--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Travel Booking</title>
+    <title>Online Fashion shopping</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <style>
         body {
@@ -13,7 +13,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background-image: url("cosmetics.jfif");
+            background-image: url("home2.jpeg");
             background-size: cover; /* Ensure the background image covers the page */
             background-repeat: no-repeat;
         }
@@ -21,6 +21,7 @@
         header {
             background-color: #333;
             color: white;
+            box-shadow: 0 0 10px rgb(51, 255, 0);
             padding: 10px;
         }
 
@@ -46,13 +47,13 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
-            color: rgb(0, 2, 2);
+            color: rgb(150, 236, 236);
             text-align: center; /* Center text in the main section */
         }
 
         form {
-            background-color: rgb(216, 245, 174);
-            padding: 20px;
+            background-color: transparent;
+            padding: 30px;
             border-radius: 5px;
             box-shadow: 0 0 10px rgb(51, 255, 0);
             width: 300px; /* Adjusted for better fit */
@@ -78,8 +79,9 @@
         footer {
             background-color: #333;
             color: white;
+            box-shadow: 0 0 10px rgb(51, 255, 0);
             padding: 10px;
-            text-align: center; /* Center text in the footer */
+            text-align:right; /* Center text in the footer */
         }
     </style>
 </head>
