--- a/login.html
+++ b/login.html
@@ -5,16 +5,15 @@
 	<link rel="stylesheet" href="style.css">
 	<style>
 	header{
-		color: rgb(243, 28, 28);
-        background:skyblue;
+		color: rgb(250, 238, 238);
+        background:rgb(0, 0, 0);
 	}
 		
 		body{
-			background-image:url("22.jpg") ;
+			background-image:url("login.jpeg") ;
   			background-repeat: no-repeat;
 			background-size:cover;
 		}
-		body {
 			
 
 		
@@ -32,7 +31,7 @@
 			border-radius: 5px;
 			box-shadow: 0 0 10px rgb(255, 255, 255);
 			max-width: 400px;
-			margin: 0 auto;
+		s	margin: 0 auto;
 		}
 
 		input[type="text"], input[type="password"] {
@@ -73,11 +72,12 @@ label{
 <header>
 	<ul>
 	
-		<a href="file:///C:/Users/user/OneDrive/Desktop/New%20folder/coding/HOME.html">Back</a>
+		<a href="home.html">Back</a>
 	</ul>
 </header>
 <body>
 	<h1>Login</h1><br><br><br>
+	<center>
 	<form action="jdbc:mysql://127.0.0.1:3306/onlinefashionshopping","root","Aspire@12345">
 		<label for="username"><b>UserName:</b></label>
 		<input type="text" id="UserName" name="UserName" placeholder="Enter your username">
