modified:   about_us.html 	modified:   contact_us.html 	modified:   home.html 	modified:   login.html 	modified:   register.html 	new file:   server.py 	renamed:    7a6c62ab-397d-4373-a7f4-33a5cb12822e.jpeg -> static/7a6c62ab-397d-4373-a7f4-33a5cb12822e.jpeg 	renamed:    Beautiful_chain_watch.jpeg -> static/Beautiful_chain_watch.jpeg 	renamed:    Oddity_-_DISSENT_Matte_Lipstick.jpeg -> static/Oddity_-_DISSENT_Matte_Lipstick.jpeg 	renamed:    home2.jpeg -> static/home2.jpeg 	renamed:    lip_gloss.jpeg -> static/lip_gloss.jpeg 	renamed:    login.jpeg -> static/login.jpeg 	renamed:    maskara.jpeg -> static/maskara.jpeg 	renamed:    perfume.jpeg -> static/perfume.jpeg 	renamed:    register.jpeg -> static/register.jpeg 	renamed:    shoes.jpeg -> static/shoes.jpeg 	renamed:    shop.jpeg -> static/shop.jpeg 	modified:   view_product.html

--- a/about_us.html
+++ b/about_us.html
@@ -9,7 +9,7 @@
         body 
 		
 		{
-			background-image: url("shoppin img.jpg");
+			background-image: url("shoppin img.jpg");/*need update*/
   			
   			background-size: cover;
 		
