--- a/register.html
+++ b/register.html
@@ -125,7 +125,7 @@
 	<style>
 
 		body{
-			background-image:url("register.jpeg") ;
+			background-image:url("{{url_for('static',filename='register.jpeg')}}") ;
 			background-repeat: repeat;
 			background-size: cover;
 		}
