--- a/contact_us.html
+++ b/contact_us.html
@@ -5,7 +5,7 @@
 	<style>
 
 		body{
-			background-image:url("jackets and shoes.jpg") ;
+			background-image:url("jackets and shoes.jpg") ; /*needs update*/
 			background-repeat: repeat;
 			background-size: cover;
 		}
