--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
-            background-image: url("home2.jpeg");
+            background-image: url("{{url_for('static',filename='home2.jpeg')}}");
             background-size: cover; /* Ensure the background image covers the page */
             background-repeat: no-repeat;
         }
